test/algeff/wrong/linear2.kk.out
test/algeff/wrong/linear2.kk(19, 3): error: handler for state needs to be linear but uses a non-linear effect: amb
 context: handle(action)
 fun get() { s }
 fun put(t) { if flip() then s := t; () }
 term : handle
 hint : ensure only linear effects are used in a handler